turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:17: error: Int does not take parameters
  println(rule((state)(test)))
                      ^Turmite:18: error: type mismatch;
 found   : Array[Int]
 required: Int
  mov= rule(state)(test)
                  ^